Remove high performance timers from OS/2 and revert to default millisecond timer. Thanks to Michael Kaply <mkaply@us.ibm.com> for the patch. Bug #136958 r=cls